Fix square outline issue on Safari

--- a/styles/main.css
+++ b/styles/main.css
@@ -12,8 +12,8 @@ main {
 
 .search-bar-container {
   width: min(87%, 551px);
-  outline: 1px solid rgb(221, 221, 221);
-  border-radius: 1px;
+  box-shadow: 0 0 0 1px rgb(221, 221, 221);
+  border-radius: 40px;
   padding: 10px 15px;
   display: flex;
   flex-direction: row;
@@ -23,7 +23,6 @@ main {
 }
 
 .search-bar-container:hover {
-  outline: none;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.2);
 }
 
